// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Sidecard Blue 1`] = `
<Sidecard
  sideCard={
    Object {
      "content": Array [
        "This is where I put my content for the sidecard",
      ],
      "heading": "Heading",
      "type": "blue",
    }
  }
>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 pt-2"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="submit-container"
          id="blue-section"
        >
          <h2
            className="heading-style"
          >
            Heading
          </h2>
          <div
            className="submit-content"
          >
            <span>
              This is where I put my content for the sidecard
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</Sidecard>
`;

exports[`Storyshots Sidecard Blue Grey 1`] = `
<Sidecard
  sideCard={
    Object {
      "content": Array [
        "This is where I put my content for the sidecard",
      ],
      "heading": "Heading",
      "type": "bluegrey",
    }
  }
>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 pt-2"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="bluegrey-container"
          id="bluegrey-section"
        >
          <div
            className="container-background bluegrey-heading"
          >
            <h2
              className="heading-style"
            >
              Heading
            </h2>
          </div>
          <div
            className="bluegrey-content"
          >
            <span
              className="content-style"
            >
              This is where I put my content for the sidecard
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</Sidecard>
`;

exports[`Storyshots Sidecard Grey 1`] = `
<Sidecard
  sideCard={
    Object {
      "content": Array [
        "This is where I put my content for the sidecard",
      ],
      "heading": "Heading",
      "type": "grey",
    }
  }
>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 pt-2"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="submit-container"
          id="grey-section"
          style={
            Object {
              "backgroundColor": "#F2F2F2",
              "border": "none",
              "color": "#000",
            }
          }
        >
          <h2
            style={
              Object {
                "color": "#000",
              }
            }
          >
            Heading
          </h2>
          <div
            className="submit-content"
          >
            <span>
              This is where I put my content for the sidecard
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</Sidecard>
`;

exports[`Storyshots Sidecard Mobile 1`] = `
<Sidecard
  sideCard={
    Object {
      "content": Array [
        "This is where I put my content for the sidecard",
      ],
      "heading": "Heading",
      "icon": <FaIdCard
        className="side-card-icon"
      />,
      "type": "bluegrey",
    }
  }
>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 pt-2"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="bluegrey-container"
          id="bluegrey-section"
        >
          <div
            className="container-background bluegrey-heading"
          >
            <h2
              className="heading-style"
            >
              <div
                className="row"
              >
                <div
                  className="side-card-row"
                >
                  <div
                    className="round-icon-wrapper"
                  >
                    <FaIdCard
                      className="side-card-icon"
                    >
                      <IconBase
                        attr={
                          Object {
                            "viewBox": "0 0 576 512",
                          }
                        }
                        className="side-card-icon"
                      >
                        <svg
                          className="side-card-icon"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          strokeWidth="0"
                          style={
                            Object {
                              "color": undefined,
                            }
                          }
                          viewBox="0 0 576 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M528 32H48C21.5 32 0 53.5 0 80v16h576V80c0-26.5-21.5-48-48-48zM0 432c0 26.5 21.5 48 48 48h480c26.5 0 48-21.5 48-48V128H0v304zm352-232c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zM176 192c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64zM67.1 396.2C75.5 370.5 99.6 352 128 352h8.2c12.3 5.1 25.7 8 39.8 8s27.6-2.9 39.8-8h8.2c28.4 0 52.5 18.5 60.9 44.2 3.2 9.9-5.2 19.8-15.6 19.8H82.7c-10.4 0-18.8-10-15.6-19.8z"
                            key="0"
                          />
                        </svg>
                      </IconBase>
                    </FaIdCard>
                  </div>
                  <div
                    className="side-card-title"
                  >
                    Heading
                  </div>
                </div>
              </div>
            </h2>
          </div>
          <div
            className="bluegrey-content"
          >
            <span
              className="content-style"
            >
              This is where I put my content for the sidecard
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</Sidecard>
`;

exports[`Storyshots Sidecard With Icon 1`] = `
<Sidecard
  sideCard={
    Object {
      "content": Array [
        "This is where I put my content for the sidecard",
      ],
      "heading": "Heading",
      "icon": <FaIdCard
        className="side-card-icon"
      />,
      "type": "bluegrey",
    }
  }
>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12 pt-2"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="bluegrey-container"
          id="bluegrey-section"
        >
          <div
            className="container-background bluegrey-heading"
          >
            <h2
              className="heading-style"
            >
              <div
                className="row"
              >
                <div
                  className="side-card-row"
                >
                  <div
                    className="round-icon-wrapper"
                  >
                    <FaIdCard
                      className="side-card-icon"
                    >
                      <IconBase
                        attr={
                          Object {
                            "viewBox": "0 0 576 512",
                          }
                        }
                        className="side-card-icon"
                      >
                        <svg
                          className="side-card-icon"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          strokeWidth="0"
                          style={
                            Object {
                              "color": undefined,
                            }
                          }
                          viewBox="0 0 576 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M528 32H48C21.5 32 0 53.5 0 80v16h576V80c0-26.5-21.5-48-48-48zM0 432c0 26.5 21.5 48 48 48h480c26.5 0 48-21.5 48-48V128H0v304zm352-232c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zM176 192c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64zM67.1 396.2C75.5 370.5 99.6 352 128 352h8.2c12.3 5.1 25.7 8 39.8 8s27.6-2.9 39.8-8h8.2c28.4 0 52.5 18.5 60.9 44.2 3.2 9.9-5.2 19.8-15.6 19.8H82.7c-10.4 0-18.8-10-15.6-19.8z"
                            key="0"
                          />
                        </svg>
                      </IconBase>
                    </FaIdCard>
                  </div>
                  <div
                    className="side-card-title"
                  >
                    Heading
                  </div>
                </div>
              </div>
            </h2>
          </div>
          <div
            className="bluegrey-content"
          >
            <span
              className="content-style"
            >
              This is where I put my content for the sidecard
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</Sidecard>
`;
